--- a/register.html
+++ b/register.html
@@ -24,13 +24,13 @@
       <form action="contact.html" method="get">
 
         <label for="customerName">Customer Name</label>
-        <input type="text" name="customerName" id="customerName">
+        <input type="text" name="customerName" id="customerName" required >
 
         <label for="dateOfBirth">Date Of Birth</label>
         <input type="date" name="dateOfBirth" id="dateOfBirth">
 
         <label for="email">Email Id</label>
-        <input type="email" name="email" id="email">
+        <input type="email" name="email" id="email" multiple>
 
         <label for="city">City</label>
         <select name="city" id="city">
@@ -45,6 +45,7 @@
 
           </optgroup>
         </select>
+
 
         <!-- Create a CheckBox  to take skill sets as input-->
 
@@ -66,7 +67,7 @@
         <span>Un Subscribe</span>
 
 
-        <input type="submit" value="Register">
+        <input type="submit" value="Register" disabled="!form.valid">
       </form>
     </article>
   </section>
