--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
     />
 
     <a href="register.html">Register</a>
+    <a href="bookappointment.html">Appointment</a>
+    
     <a href="blog.html">Blogs</a>
     <a href="contact.html">Contact</a>
+
 
     <p id="firstPara">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, ad dolorum
