--- a/doctor.html
+++ b/doctor.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doctors</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <header>
         <h1 id="pageHeading">Our Specialists</h1>
+        <h4 id="subHeading">Doctor List</h4>
     </header>
-    <div >
+    <div>
         <header id="first">
             <h1 class="centerText">Dentist</h1>
             <figure><img src="images/doctor1.png" alt="dentist"></figure>
@@ -39,8 +42,8 @@
         <header>
             <h1 class="centerText">Orthopedics</h1>
             <figure><img src="images/doctor3.png" alt="Orthopedics"></figure>
-            
-            
+
+
 
         </header>
         <section>
@@ -63,9 +66,10 @@
             </ul>
         </section>
     </div>
-<footer>
-    <p class="centerText">Desinged By ABC Consultants 😀</p>
-</footer>
+    <footer>
+        <p class="centerText">Desinged By ABC Consultants 😀</p>
+    </footer>
 
 </body>
+
 </html>
