Lunch Time Completion

--- a/doctor.html
+++ b/doctor.html
@@ -13,19 +13,19 @@
         <h1 id="pageHeading">Our Specialists</h1>
         <h4 id="subHeading">Doctor List</h4>
     </header>
-    <div>
+    <div class="box">
         <header id="first">
             <h1 class="centerText">Dentist</h1>
             <figure><img src="images/doctor1.png" alt="dentist"></figure>
         </header>
-        <section>
-            <ul>
+        <section class="centerText">
+            <ul id="dentalservice">
                 <li>Teeth Cleaning</li>
                 <li>Root canal</li>
             </ul>
         </section>
     </div>
-    <div>
+    <div class="box">
         <header class="centerText">
             <h1>Cardiologist</h1>
             <figure><img src="images/doctor2.png" alt="Cardiologist"></figure>
@@ -38,7 +38,7 @@
             </ol>
         </section>
     </div>
-    <div>
+    <div class="box">
         <header>
             <h1 class="centerText">Orthopedics</h1>
             <figure><img src="images/doctor3.png" alt="Orthopedics"></figure>
@@ -53,7 +53,7 @@
             </ol>
         </section>
     </div>
-    <div>
+    <div class="box">
         <header>
             <h1 class="centerText">ENT</h1>
             <figure><img src="images/doctor4.png" alt="ent"></figure>
@@ -70,6 +70,8 @@
         <p class="centerText">Desinged By ABC Consultants 😀</p>
     </footer>
 
+    <!-- <div class="box">First</div>
+    <div class="box">Second</div> -->
 </body>
 
 </html>
