Day2 End of day Update

--- a/doctor.html
+++ b/doctor.html
@@ -9,63 +9,65 @@
 </head>
 
 <body>
-    <header>
-        <h1 id="pageHeading">Our Specialists</h1>
-        <h4 id="subHeading">Doctor List</h4>
-    </header>
-    <div class="box">
-        <header id="first">
-            <h1 class="centerText">Dentist</h1>
-            <figure><img src="images/doctor1.png" alt="dentist"></figure>
-        </header>
-        <section class="centerText">
-            <ul id="dentalservice">
-                <li>Teeth Cleaning</li>
-                <li>Root canal</li>
-            </ul>
-        </section>
-    </div>
-    <div class="box">
-        <header class="centerText">
-            <h1>Cardiologist</h1>
-            <figure><img src="images/doctor2.png" alt="Cardiologist"></figure>
-
-        </header>
-        <section>
-            <ol>
-                <li>Angiogram</li>
-                <li>CABG</li>
-            </ol>
-        </section>
-    </div>
-    <div class="box">
+    <section style="margin-left: 80px;">
         <header>
-            <h1 class="centerText">Orthopedics</h1>
-            <figure><img src="images/doctor3.png" alt="Orthopedics"></figure>
-
-
-
+            <h1 id="pageHeading">Our Specialists</h1>
+            <h4 id="subHeading">Doctor List</h4>
         </header>
-        <section>
-            <ol>
-                <li>Bone Marrow Surgery</li>
-                <li>Bone Replacement</li>
-            </ol>
-        </section>
-    </div>
-    <div class="box">
-        <header>
-            <h1 class="centerText">ENT</h1>
-            <figure><img src="images/doctor4.png" alt="ent"></figure>
+        <div class="box">
+            <header id="first">
+                <h1 class="centerText">Dentist</h1>
+                <figure><img src="images/doctor1.png" alt="dentist"></figure>
+            </header>
+            <section class="centerText">
+                <ul id="dentalservice">
+                    <li>Teeth Cleaning</li>
+                    <li>Root canal</li>
+                </ul>
+            </section>
+        </div>
+        <div class="box">
+            <header class="centerText">
+                <h1>Cardiologist</h1>
+                <figure><img src="images/doctor2.png" alt="Cardiologist"></figure>
 
-        </header>
-        <section>
-            <ul>
-                <li>Tonsilies</li>
-                <li>Ear Surgery</li>
-            </ul>
-        </section>
-    </div>
+            </header>
+            <section>
+                <ol>
+                    <li>Angiogram</li>
+                    <li>CABG</li>
+                </ol>
+            </section>
+        </div>
+        <div class="box">
+            <header>
+                <h1 class="centerText">Orthopedics</h1>
+                <figure><img src="images/doctor3.png" alt="Orthopedics"></figure>
+
+
+
+            </header>
+            <section>
+                <ol>
+                    <li>Bone Marrow Surgery</li>
+                    <li>Bone Replacement</li>
+                </ol>
+            </section>
+        </div>
+        <div class="box">
+            <header>
+                <h1 class="centerText">ENT</h1>
+                <figure><img src="images/doctor4.png" alt="ent"></figure>
+
+            </header>
+            <section>
+                <ul>
+                    <li>Tonsilies</li>
+                    <li>Ear Surgery</li>
+                </ul>
+            </section>
+        </div>
+    </section>
     <footer>
         <p class="centerText">Desinged By ABC Consultants 😀</p>
     </footer>
