--- a/index.html
+++ b/index.html
@@ -1,51 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hospital Management</title>
-    <link rel="stylesheet" href="styles/global.css" />
 
-    <style>
-      .thin-border {
-        border: 2px solid red;
-      }
-      
-    </style>`
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hospital Management</title>
+  <link rel="stylesheet" href="styles/global.css" />
 
-  </head>
-  <body>
-    <h1>MedLife Hospitals</h1>
+  <style>
+    .thin-border {
+      border: 2px solid red;
+    }
+  </style>`
 
-    <!-- <a href="register.html" target="_blank">Register</a>
+</head>
+
+<body>
+  <h1 id="heading"></h1>
+
+  <!-- <a href="register.html" target="_blank">Register</a>
      -->
-    <!-- <img src="images/logo.png" alt="Company Logo" style="width: 100px;" /> -->
-    <img
-      src="images/logo.png"
-      alt="Company Logo"
-      title="Company Logo"
-      class="min-width"
-    />
+  <!-- <img src="images/logo.png" alt="Company Logo" style="width: 100px;" /> -->
+  <img src="images/logo.png" alt="Company Logo" title="Company Logo" class="min-width" />
 
-    <a href="register.html">Register</a>
-    <a href="bookappointment.html">Appointment</a>
-    
-    <a href="blog.html">Blogs</a>
-    <a href="contact.html">Contact</a>
+  <a href="register.html" id="firstLink">Register</a>
+  <a href="bookappointment.html">Appointment</a>
+
+  <a href="blog.html">Blogs</a>
+  <a href="contact.html">Contact</a>
+
+  <a href="doctor.html">Doctors</a>
 
 
-    <p id="firstPara">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, ad dolorum
-      vitae sequi perferendis architecto tempore repudiandae sed dolore
-      consectetur eaque est, illum alias soluta officia aliquam ratione aliquid
-      porro!
-    </p>
-    <p class="high-light">
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur,
-      molestiae voluptatem? Tenetur harum, tempore corporis molestias unde
-      dolorum dicta voluptatem numquam deserunt illo quia eos ut veniam,
-      distinctio obcaecati aspernatur!
-    </p>
-    <div class="thin-border min-width">Understanding CSS Style</div>
-  </body>
+  <p id="firstPara">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, ad dolorum
+    vitae sequi perferendis architecto tempore repudiandae sed dolore
+    consectetur eaque est, illum alias soluta officia aliquam ratione aliquid
+    porro!
+  </p>
+  <p class="high-light">
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur,
+    molestiae voluptatem? Tenetur harum, tempore corporis molestias unde
+    dolorum dicta voluptatem numquam deserunt illo quia eos ut veniam,
+    distinctio obcaecati aspernatur!
+  </p>
+  <div class="thin-border min-width">Understanding CSS Style</div>
+  <script src="scripts/quickstart.js"></script>
+
+</body>
+
 </html>
