--- a/js_functions.html
+++ b/js_functions.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Java Script Functions</title>
+
 </head>
+
 <body>
-    
-    <script src="scripts/understanding_js_functions.js"></script>
+    <!-- <script src="scripts/understanding_js_functions.js"></script> -->
+
+    <script src="scripts/closure_and_arrays.js"></script>
 </body>
+
 </html>
