Day 4 Lunch Time

--- a/showappointment.html
+++ b/showappointment.html
@@ -10,13 +10,47 @@
 
 <body>
     <section class="multi-image-backgrnd">
-        <header class="heading"></header>
+        <header class="heading">
+        </header>
+
         <article>
 
+            <figure class="container">
+                <img src="/images/appointment.jpeg" alt="Appointment" class="custom-transform">
+            </figure>
+
+            <aside>
+                <!-- <embed src="videos/demo.mp4" width="200px" height="100px"> -->
+
+                <video src="videos/demo.mp4" controls="on" autoplay=true width="300px" muted="false">
+
+                    <!-- <iframe src="videos/demo.mp4" frameborder="0"></iframe> -->
+            </aside>
         </article>
+        <article>
+
+            <table>
+
+                <thead>
+                    <th>Sl.No</th>
+                    <th>Doctor Name</th>
+                    <th>Timing</th>
+                </thead>
+                <tbody>
+                    <td>1</td>
+                    <td>Dr.Rajesh</td>
+                    <td>Weekdays 7.00 pm to 9.00pm</td>
+                    <td><button>Delete</button></td>
+
+                </tbody>
+            </table>
+
+        </article>
+
         <footer></footer>
     </section>
 </body>
 
 <script src="scripts/showappointment.js"></script>
+
 </html>
