Post Lunch First Session

--- a/showappointment.html
+++ b/showappointment.html
@@ -17,15 +17,16 @@
 
             <figure class="container">
                 <img src="/images/appointment.jpeg" alt="Appointment" class="custom-transform">
+                <aside style="justify-items: flex-end;">
+                    <!-- <embed src="videos/demo.mp4" width="200px" height="100px"> -->
+
+                    <!-- <video src="videos/demo.mp4" controls="on" autoplay=true width="300px" height="300px" muted="false"> -->
+
+                        <!-- <iframe src="videos/demo.mp4" frameborder="0"></iframe> -->
+                </aside>
             </figure>
 
-            <aside>
-                <!-- <embed src="videos/demo.mp4" width="200px" height="100px"> -->
 
-                <video src="videos/demo.mp4" controls="on" autoplay=true width="300px" muted="false">
-
-                    <!-- <iframe src="videos/demo.mp4" frameborder="0"></iframe> -->
-            </aside>
         </article>
         <article>
 
@@ -37,10 +38,6 @@
                     <th>Timing</th>
                 </thead>
                 <tbody>
-                    <td>1</td>
-                    <td>Dr.Rajesh</td>
-                    <td>Weekdays 7.00 pm to 9.00pm</td>
-                    <td><button>Delete</button></td>
 
                 </tbody>
             </table>
