End of Day 4 commit

--- a/showappointment.html
+++ b/showappointment.html
@@ -37,8 +37,12 @@
                 <input type="text" name="timing" id="timing">
 
                 <button id="addBtn">Add</button>
+
+
             </form>
 
+
+            <button id="addFld">Add Field</button>
 
         </article>
         <article>
@@ -51,6 +55,7 @@
                     <th>Timing</th>
                 </thead>
                 <tbody>
+
 
                 </tbody>
             </table>
