CRUD Example Added

--- a/showappointment.html
+++ b/showappointment.html
@@ -42,7 +42,7 @@
             </form>
 
 
-            <button id="addFld">Add Field</button>
+            <!-- <button id="addFld">Add Field</button> -->
 
         </article>
         <article>
@@ -63,36 +63,42 @@
         </article>
 
         <footer class="foot-3-col">
-            <div>
+            <div style="break-inside: avoid;">
                 <div>
                     <h4>Follow Us</h4>
                 </div>
                 <div>
 
-                    <a href="#"><img src="images/instagram.png" alt=""></a>
-                    <a href="#"><img src="images/linkedin.png" alt=""></a>
+                    <ul style="list-style: none;">
+                        <li>
+                            <a href="#"><img src="images/instagram.png" alt="" style="width: 50px; height: 50px;"></a>
 
+                        </li>
+                        <li>
+                            <a href="#"><img src="images/linkedin.png" alt="" style="width: 50px; height: 50px;"></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-            <div>
+            <div style="break-inside: avoid;">
 
                 <div>
                     <h4>Know Us</h4>
                 </div>
                 <div>
-                    <ul>
+                    <ul style="list-style: none;">
                         <li><a href="#">Blogs</a></li>
                         <li><a href="#">Downloads</a></li>
                     </ul>
                 </div>
             </div>
 
-            <div>
+            <div style="break-inside: avoid;">
                 <div>
                     <h4>Our Partners</h4>
                 </div>
                 <div>
-                    <ul>
+                    <ul style="list-style: none;">
                         <li><a href="#">Insurance</a></li>
                         <li><a href="#">Yoga</a></li>
                     </ul>
@@ -104,6 +110,6 @@
     </section>
 </body>
 
-<script src="scripts/showappointment.js"></script>
+<script src="scripts/crud.js"></script>
 
 </html>
