--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     .thin-border {
       border: 2px solid red;
     }
+    :root{
+
+      --primary_color: grey;
+    }
+
+    div{
+
+      background-color: var(--primary_color);
+    }
   </style>`
 
 </head>
